--- a/index.html
+++ b/index.html
@@ -15,22 +15,24 @@
       <main>
           <h2>Worldwide</h2>
           <div class="grid">
-              <div class="g-box">
+              <div class="g-box cases">
                 <h6 class="g-heading">Total Cases</h6>
-                <h3 id="total-cases" class="g-data">663,432</h3>
+                <h3 id="total-cases"></h3>
               </div>
-              <div class="g-box">
-                <h6 class="g-heading">Total Deaths</h6>
-                <h3 id="total-deaths" class="g-data">663,432</h3>
-              </div>
-              <div class="g-box">
-                <h6 class="g-heading">Total Recoveries</h6>
-                <h3 id="total-recoveries" class="g-data">663,432</h3>
-              </div>
-              <div class="g-box">
+              <div class="g-box active">
                 <h6 class="g-heading">Total Active</h6>
-                <h3 id="total-active" class="g-data">663,432</h3>
+                <h3 id="total-active"</h3>
               </div>
+        
+              <div class="g-box recoveries">
+                <h6 class="g-heading">Total Recoveries</h6>
+                <h3 id="total-recoveries" ></h3>
+              </div>
+              <div class="g-box deaths">
+                <h6 class="g-heading">Total Deaths</h6>
+                <h3 id="total-deaths" ></h3>
+              </div>
+
           </div>
           </div>
       </main>
