--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="css/style.css">
+    <link
+      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+      rel="stylesheet"
+      integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
+      crossorigin="anonymous"
+    />
     <title>COVID-19 Tracker</title>
   </head>
   <body>
@@ -12,31 +18,45 @@
         <h1>COVID-19 Tracker</h1>
         <p>Track the spread of the Coronavirus Outbreak</p>
 
-      <main>
-          <h2>Worldwide</h2>
-          <div class="grid">
-              <div class="g-box cases">
-                <h6 class="g-heading">Total Cases</h6>
-                <h3 id="total-cases"></h3>
-              </div>
-              <div class="g-box active">
-                <h6 class="g-heading">Total Active</h6>
-                <h3 id="total-active"</h3>
-              </div>
-        
-              <div class="g-box recoveries">
-                <h6 class="g-heading">Total Recoveries</h6>
-                <h3 id="total-recoveries" ></h3>
-              </div>
-              <div class="g-box deaths">
-                <h6 class="g-heading">Total Deaths</h6>
-                <h3 id="total-deaths" ></h3>
-              </div>
+      <section class="worldwide">
+        <h2>Worldwide</h2>
+        <div class="grid">
+          <div class="g-box cases">
+            <h6 class="g-heading">Total Cases</h6>
+            <h3 id="total-cases"></h3>
+          </div>
+          <div class="g-box active">
+            <h6 class="g-heading">Total Active</h6>
+            <h3 id="total-active"></h3>
+          </div>
+    
+          <div class="g-box recovered">
+            <h6 class="g-heading">Total recovered</h6>
+            <h3 id="total-recovered" ></h3>
+          </div>
+          <div class="g-box deaths">
+            <h6 class="g-heading">Total Deaths</h6>
+            <h3 id="total-deaths" ></h3>
+          </div>
+        </div>
+      </section>
 
-          </div>
-          </div>
-      </main>
+      <section class="country-wise">
+        <h2>Country</h2>
+        <form id="search">
+          <input id="search-input" placeholder="Search" class="search" type="text">
+          <button class="search-btn" id="search-btn">
+            <i class="fa fa-search"></i>
+          </button>
+        </forms>
+        <div id="result-data">
+
+        </div>
+      </section>
     </div>
+
+
+    <footer>Created by <a href="https://github.com/Raj2631">Rakshit Pathak</a></footer>
 
     <script src="./script.js"></script>
   </body>
