loader issue fixed

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <div class="container">
-        <h1>COVID-19 Tracker</h1>
+        <h1>COVID Tracker </h1>
         <p>Track the spread of the Coronavirus Outbreak</p>
 
       <section class="worldwide">
