--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       </section>
 
       <section class="country-wise">
-        <h2>Search for a particular country!</h2>
+        <h2>Search for a particular country here.</h2>
         <form id="search">
           <input id="search-input" placeholder="Search" class="search" type="text">
           <button class="search-btn" id="search-btn">
