--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css" />
     <link
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
       rel="stylesheet"
@@ -15,8 +15,8 @@
   </head>
   <body>
     <div class="container">
-        <h1>COVID Tracker </h1>
-        <p>Track the spread of the Coronavirus Outbreak</p>
+      <h1>COVID Tracker</h1>
+      <p>Track the spread of the Coronavirus Outbreak</p>
 
       <section class="worldwide">
         <h2>Worldwide</h2>
@@ -29,14 +29,14 @@
             <h6 class="g-heading">Total Active</h6>
             <h3 id="total-active"></h3>
           </div>
-    
+
           <div class="g-box recovered">
             <h6 class="g-heading">Total recovered</h6>
-            <h3 id="total-recovered" ></h3>
+            <h3 id="total-recovered"></h3>
           </div>
           <div class="g-box deaths">
             <h6 class="g-heading">Total Deaths</h6>
-            <h3 id="total-deaths" ></h3>
+            <h3 id="total-deaths"></h3>
           </div>
         </div>
       </section>
@@ -44,19 +44,23 @@
       <section class="country-wise">
         <h2>Search for a particular country here.</h2>
         <form id="search">
-          <input id="search-input" placeholder="Search" class="search" type="text">
+          <input
+            id="search-input"
+            placeholder="Search"
+            class="search"
+            type="text"
+          />
           <button class="search-btn" id="search-btn">
             <i class="fa fa-search"></i>
           </button>
-        </forms>
-        <div id="result-data">
-
-        </div>
+        </form>
+        <div id="result-data"></div>
       </section>
     </div>
 
-
-    <footer>Created by <a href="https://github.com/Raj2631">Rakshit Pathak</a></footer>
+    <footer>
+      Created by <a href="https://github.com/Raj2631">Rakshit Pathak</a>
+    </footer>
 
     <script src="./script.js"></script>
   </body>
