--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </div>
 
     <footer>
-      Created by <a href="https://github.com/Raj2631">Rakshit</a>
+      Developed by <a href="https://github.com/Raj2631">Rakshit</a>
     </footer>
 
     <script src="./script.js"></script>
